--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.31.11",
     "postcss": "^8.4.19",
+    "prettier": "^2.8.0",
     "tailwindcss": "^3.2.4"
   }
 }
