--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-react": "^7.31.11",
     "postcss": "^8.4.19",
     "prettier": "^2.8.0",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "ts-mockito": "^2.6.1"
   }
 }
