--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "eslint": "^8.29.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.31.11",
+    "i": "^0.3.7",
+    "jest-fetch-mock": "^3.0.3",
     "postcss": "^8.4.19",
     "prettier": "^2.8.0",
     "tailwindcss": "^3.2.4",
