--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,9 @@ jobs:
       - name: Deploy on FTP Server
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
-          server: ${{secrets.server}}
-          username: ${{secrets.ftp-username}}
-          password: ${{secrets.ftp-password}}
+          server: ${{secrets.ftp_server}}
+          username: ${{secrets.ftp_username}}
+          password: ${{secrets.ftp_password}}
           exclude: |
             /*
             !/build/**
