--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest$
+    runs-on: ubuntu-latest
     
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
