ci: only upload build folder

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,5 +28,16 @@ jobs:
           username: ${{secrets.ftp_username}}
           password: ${{secrets.ftp_password}}
           exclude: |
-            /*
-            !/build/**
+            **/public/**
+            **/src/**
+            */
+            **/.git*
+            **/.git*/**
+            **/node_modules/**
+            .eslintignore
+            .eslintrc.json
+            .prettierignore
+            .prettierrc.json
+            package-lock.json
+            package.json
+            postcss.config.js
